--- a/src/pages/about/team.astro
+++ b/src/pages/about/team.astro
@@ -39,6 +39,9 @@ import Col from '../../components/Col.astro';
 </SubSection>
 
 <SubSection id="team" title="The team">
+
+<p>Faculty</p>
+
 <Row>
     <Col values="12 md-3">
         <Image src='/about/nikhil.png' class_=""></Image>
@@ -59,7 +62,7 @@ import Col from '../../components/Col.astro';
 </Row>
 
 <Row>
-    <Col values="12 md-1">
+    <Col values="12 md-2">
     </Col>
     <Col values="12 md-3">
        <Image src='/about/shelby.jpg' class_=""></Image>
