--- a/src/pages/about/team.astro
+++ b/src/pages/about/team.astro
@@ -40,7 +40,7 @@ import Col from '../../components/Col.astro';
 
 <SubSection id="team" title="The team">
 
-<Image src='/about/team.png' class_=""></Image>
+<Image src='/about/team2.png' class_=""></Image>
 
 
 </SubSection>
