removed a few derivations

--- a/src/pages/dyn/work_and_energy.astro
+++ b/src/pages/dyn/work_and_energy.astro
@@ -333,7 +333,7 @@ import Col from "../../components/Col.astro"
 	</p>
 </DisplayEquation>
 
-<DisplayEquationCustom id="ren-eco" title="Work-energy theorem." background="True" derivation="true">
+<DisplayEquationCustom id="ren-eco" title="Work-energy theorem." background="True">
 	<DisplayEquation equation="W = \Delta T + \Delta V"/>
 	<p>
 		where \(W\) is the work done by non-conservative forces. If non-conservative forces are not present, then
@@ -371,7 +371,7 @@ import Col from "../../components/Col.astro"
 
 	<DisplayEquation equation="\\begin{aligned}W &amp;= \\int_{\\vec{r}_1}^{\\vec{r}_2} \\vec{F} \\cdot d\\vec{r} \\\\&amp; = \\int_{t_1}^{t_2} \\vec{F} \\cdot \\dot{\\vec{r}}dt\\end{aligned}" background="True" title="Work done by a force \\(\\vec{F}\\)." id="ren-wf"/>
 
-	<DisplayEquationCustom id="ren-wc" title="Work done by a constant force \\(\\vec{F}\\)." background="True" derivation="true">
+	<DisplayEquationCustom id="ren-wc" title="Work done by a constant force \\(\\vec{F}\\)." background="True">
 		<DisplayEquation equation="W = \\vec{F} \\cdot \\Delta \\vec{r}"/>
 		<p>
 			The change in position is <InlineEquation equation=" \\Delta \\vec{r} = \\vec{r}_2 - \\vec{r}_1" />
@@ -845,7 +845,7 @@ import Col from "../../components/Col.astro"
 		time. Naturally, impulse is related to momentum.
 	</p>
 	
-	<DisplayEquation equation="\\vec{J} = \\int_{t_1}^{t_2}  \\vec{F} \\, dt" id="rec-ij" title="Impulse." background="True" derivation="True" />
+	<DisplayEquation equation="\\vec{J} = \\int_{t_1}^{t_2}  \\vec{F} \\, dt" id="rec-ij" title="Impulse." background="True"  />
 
 	<p>
 		Note that impulse, like momentum, is a vector. Its direction is the same direction
