--- a/src/pages/dyn/work_and_energy.astro
+++ b/src/pages/dyn/work_and_energy.astro
@@ -270,10 +270,10 @@ import Col from "../../components/Col.astro"
 
 <DisplayEquation id="ren-ekb" equation="T = \\iiint_{\\mathcal{B}} \\frac{1}{2} \\rho v^2 \\, dV" title="Kinetic energy of an arbitrary body." background="True" />
 
-<DisplayEquation id="ren-ekr" equation="T = \\frac{1}{2} m v_C^2 + \\frac{1}{2} I_{C,\\hat\\omega} \\omega^2" title="Kinetic energy of a rigid body about the center of mass $C$." background="True" derivation="true">
+<DisplayEquation id="ren-ekr" equation="T = \\frac{1}{2} m v_C^2 + \\frac{1}{2} I_{C,\\hat\\omega} \\omega^2" title="Kinetic energy of a rigid body about the center of mass \\(C\\)." background="True" derivation="true">
 	<p>
 		Using <a href="#ren-ea">#ren-ea</a> below, in the case
-		that the point \(Q\) is the center of mass $C$ we see that
+		that the point \(Q\) is the center of mass \(C\) we see that
 		<InlineEquation equation="\\vec{r}_{QC} = \\vec{r}_{CC} = 0" /> and so the middle term
 		in <a href="#ren-ea">#ren-ea</a> is eliminated, leaving
 		the result.
