--- a/src/pages/about/team.astro
+++ b/src/pages/about/team.astro
@@ -10,7 +10,7 @@ import Col from '../../components/Col.astro';
 <Layout title="About">
 
 <SubSection id="mission" title="Mission">
-       <p>  Create quality and freely accessible on-line educational materials that enhance student curiosity, connection and creates value for for both student and instructor.</p>
+       <p>  Create quality and freely accessible on-line educational materials that enhance student curiosity, connection and creates value for both student and instructor.</p>
 </SubSection>
 
 <SubSection id="history" title="Project history">
