search index updates

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -405,7 +405,7 @@ import Searchbar from "./Searchbar.astro";
                     </div>
                 </div>
             </li>
-            COPY THE TEXT BELOW AND MODIFY IT WITH 
+            <!-- COPY THE TEXT BELOW AND MODIFY IT WITH ACCORDING TO YOUR NEEDS -->
             <!-- <li class="dropdown mega nav-item ">
                 <a class="nav-link dropdown-toggle" aria-haspopup="true" aria-expanded="false" aria-label="About">
                     <span><course_name>/span>
@@ -414,7 +414,7 @@ import Searchbar from "./Searchbar.astro";
                     <div class="d-flex">
                         <section class="tile menu white-box col">
                             <h2><a href="/<course_abbreviation>" aria-label="About">Solid Mechanics</a></h2>
-                                <ol style="column-fill: balance;" class="course-menu <course_abbreviation>-menu">
+                                <ol style="column-fill: balance; columns: x <= how many columns do you want your menu to have?;" class="course-menu">
                                     <li><a href="/<course_abbreviation>/page1?origin=sidebar">Page 1</a></li>
                                     <li><a href="/<course_abbreviation>/page2?origin=sidebar">Page 2</a></li>
                                     etc...
