--- a/src/pages/sta/moment_of_inertia.astro
+++ b/src/pages/sta/moment_of_inertia.astro
@@ -171,7 +171,7 @@ Moments of inertia of simple shapes can be combined to calculate the moments of 
 
 
 
-<Example id="blt-fst" title="Find the moment of inertia of the composite." solution="True">
+<Example id="blt-fst" title="Find the moment of inertia of a composite shape." solution="True">
     <div class="d-flex flex-row">
       <Row>
         <Col values="12 md-6">
@@ -215,8 +215,11 @@ Moments of inertia of simple shapes can be combined to calculate the moments of 
                     <strong>Diagram</strong>
                 </th>
                 <th class="table-shaded"> 
-                    <strong>Equations</strong>
+                    <strong>MoI about the centroid (centroidal axis)</strong>
                 </th>	
+                <th class="table-shaded"> 
+                    <strong>MoI about the origin</strong>
+                </th>
             </tr>
         </thead>
         <tbody>
@@ -234,6 +237,8 @@ Moments of inertia of simple shapes can be combined to calculate the moments of 
                 <InlineEquation equation="\\bar{I_{y'}} = \\frac{1}{12}b^3 h" />
                 <br>
                 <br>
+            </td>
+            <td style="vertical-align: middle">
                 <InlineEquation equation="I_x = \\frac{1}{3}b h^3"/>
                 <br>
                 <br>
