--- a/src/pages/sta/moment_of_inertia.astro
+++ b/src/pages/sta/moment_of_inertia.astro
@@ -261,6 +261,8 @@ Moments of inertia of simple shapes can be combined to calculate the moments of 
                 <InlineEquation equation="\\bar{I_{x'}} = \\frac{1}{36}bh^3" />
                 <br>
                 <br>
+            </td>
+            <td style="vertical-align: middle">
                 <InlineEquation equation="I_x = \\frac{1}{12}bh^3" />    
             </td>
             </tr>
@@ -273,6 +275,8 @@ Moments of inertia of simple shapes can be combined to calculate the moments of 
                 <td>
                     <Image src='/Solid_Mechanics/Bending-Figures/CommonShapes_Circle.png' width='5'> </Image>
                 </td>
+            <td style="vertical-align: middle">
+            </td>
             <td style="vertical-align: middle">
                 <InlineEquation equation="\\bar{I_x} = \\bar{I_y}  = \\frac{1}{4} \\pi r^4" />
                 <br>
@@ -290,6 +294,8 @@ Moments of inertia of simple shapes can be combined to calculate the moments of 
                     <Image src='/Solid_Mechanics/Bending-Figures/CommonShapes_Semi.png' width='5'> </Image>
                 </td>
             <td style="vertical-align: middle">
+            </td>
+            <td style="vertical-align: middle">
                 <InlineEquation equation="I_x = I_y = \\frac{1}{8} \\pi r^4" />
                 <br>
                 <br>
@@ -305,6 +311,8 @@ Moments of inertia of simple shapes can be combined to calculate the moments of 
                 <td>
                     <Image src='/Solid_Mechanics/Bending-Figures/CommonShapes_Quart.png' width='5'> </Image>
                 </td>
+            <td style="vertical-align: middle">
+            </td>
             <td style="vertical-align: middle">
                 <InlineEquation equation="I_x = I_y = \\frac{1}{16} \\pi r^4" />
                 <br>
@@ -328,7 +336,9 @@ Moments of inertia of simple shapes can be combined to calculate the moments of 
                 <InlineEquation equation="\\bar{I_y} = \\frac{1}{4} \\pi a^3 b"/>
                 <br>
                 <br>
-                <InlineEquation equation="J_O = \\frac{1}{4} \\pi ab(a^2+b^2)" />
+            </td>
+            <td style="vertical-align: middle">    
+            <InlineEquation equation="J_O = \\frac{1}{4} \\pi ab(a^2+b^2)" />
 
             </td>
             </tr>
