--- a/src/pages/sta/moment_of_inertia.astro
+++ b/src/pages/sta/moment_of_inertia.astro
@@ -312,6 +312,8 @@ Moments of inertia of simple shapes can be combined to calculate the moments of 
                     <Image src='/Solid_Mechanics/Bending-Figures/CommonShapes_Quart.png' width='5'> </Image>
                 </td>
             <td style="vertical-align: middle">
+            <InlineEquation equation="\\bar{I_x} = \\bar{I_y} = \\frac{1}{2}(\\frac{\\pi}{8} - \\frac{8}{9\\pi}) r^4" />
+
             </td>
             <td style="vertical-align: middle">
                 <InlineEquation equation="I_x = I_y = \\frac{1}{16} \\pi r^4" />
