--- a/src/pages/sta/moment_of_inertia.astro
+++ b/src/pages/sta/moment_of_inertia.astro
@@ -294,6 +294,10 @@ Moments of inertia of simple shapes can be combined to calculate the moments of 
                     <Image src='/Solid_Mechanics/Bending-Figures/CommonShapes_Semi.png' width='5'> </Image>
                 </td>
             <td style="vertical-align: middle">
+                <InlineEquation equation="\\bar{I_x} = (\\frac{\\pi}{8} - \\frac{8}{9\\pi}) r^4" />
+                <br>
+                <br>
+                <InlineEquation equation="\\bar{I_y} = \\frac{\\pi}{8}r^4" />
             </td>
             <td style="vertical-align: middle">
                 <InlineEquation equation="I_x = I_y = \\frac{1}{8} \\pi r^4" />
