--- a/src/pages/sta/moment_of_inertia.astro
+++ b/src/pages/sta/moment_of_inertia.astro
@@ -158,7 +158,7 @@ The dimension of the area moment of inertia is <InlineEquation equation='length^
 
     <DisplayEquation equation="\\begin{align} I_{x} = I_{x'} + A(d_y)^2 \\\\ I_{y} = I_{y'} + A(d_x)^2 \\end{align}" title="Parallel axis theorem." background="True" />
 <p>
-    where <InlineEquation equation="I_{x'}" /> and <InlineEquation equation="I_{y'}" /> are the moments of inertia about the centroid, A is the total area of the shape, and <InlineEquation equation="d" /> is the perpendicular distance from the centroid to the axes of interest in either the x or y directions.
+    where <InlineEquation equation="I_{x'}" /> and <InlineEquation equation="I_{y'}" /> are the moments of inertia about the centroid, <InlineEquation equation="A" /> is the total area of the shape, and <InlineEquation equation="d" /> is the perpendicular distance from the centroid to the axes of interest in either the x or y directions.
 </p>
 
 </SubSection>
