--- a/src/pages/sta/hydrostatic_fluid_pressure.astro
+++ b/src/pages/sta/hydrostatic_fluid_pressure.astro
@@ -131,11 +131,11 @@ Density of <InlineEquation equation=" \\text{water}  = 1000 \\ kg / m^3" />
 		<Image src='/Statics/FluidFigures/CurvedPlateSol3.jpg' width='2'> </Image>
 		<DisplayEquation equation=" \\begin{aligned}  W &amp;=  m \\ g = \\rho \\ V \\ g  \\\\   V  &amp;= \\text{volume of water} = \\frac{1}{4} \\pi \\ R^2 \\ (t)  \\\\  W  &amp;= \\rho \\frac{1}{4} \\pi \\ R^2 \\ t \\ g \\end{aligned}" />
 	</li>
-	<li> Sollve for <InlineEquation equation=" F_{H} " /> and <InlineEquation equation=" F_{V} " /> 
+	<li> Solve for <InlineEquation equation=" F_{H} " /> and <InlineEquation equation=" F_{V} " /> 
 		<DisplayEquation equation=" \\begin{aligned}  F_H &amp;= F_{R2} \\\\ &amp;= \\frac{1}{2} \\rho \\ g \\ t \\ R \\ (h_2 + h_1)  \\\\   &amp;=  \\frac{1}{2} (1000 \\ kg/m^2) \\ (9.81 \\ m/s^2) \\ (2 \\ m) \\ (3 \\ m) \\ (1.5 + 4.5 \\ m)  \\\\  &amp;= 177 \\ kN   \\end{aligned}" />
 		<DisplayEquation equation=" \\begin{aligned}  F_V &amp;= W + F_{R1} \\\\ &amp;= \\frac{1}{4} \\rho \\pi \\ R^2 \\ t \\ g + \\rho \\ g \\ h_1 \\ t \\ R  = \\rho \\ t \\ g \\ R (\\frac{1}{4} \\pi \\ R +  h_1  \\\\   &amp;= 1000 \\ kg/m^3 \\ (2 \\ m) \\ (9.81 \\ m/s^2) \\ (3 \\ m) [ \\frac{1}{4} \\pi \\ (3 \\ m) + 1.5 \\ m ]  \\\\ &amp;= 58,860 \\ [3.856]  \\\\   &amp;= 227 \\ kN  \\end{aligned}" />
 	</li>
-	<li> Sollve for <InlineEquation equation=" F_{R} " /> 
+	<li> Solve for <InlineEquation equation=" F_{R} " /> 
 		<DisplayEquation equation=" \\begin{aligned} F_R  &amp;= \\sqrt{{F_H}^2 + {F_V}^2}  \\\\  &amp;=  \\sqrt{{177 \\ kN}^2 + {227 \\ kN}^2}  \\\\  &amp;=  288 \\ kN  \\end{aligned}"  />  
 	</li>
 </ol>
