--- a/src/pages/sta/hydrostatic_fluid_pressure.astro
+++ b/src/pages/sta/hydrostatic_fluid_pressure.astro
@@ -173,6 +173,7 @@ Density of <InlineEquation equation=" \\text{water}  = 1000 \\ kg / m^3" />
 	<Image src='/Statics/FluidFigures/Buoyancy.jpg' width='4'></Image>
 
 	<div slot="solution">
+	<p> We know that the buoyant force is equivalent to the weight of the water that was displaced by the basketball, or the weight of a sphere of water that is the same size as the basketball. </p>
 	<DisplayEquation equation="\\begin{aligned}  F_B &amp;=  W   \\\\   &amp;= m_{water} \\ g \\\\  &amp;= \\rho_{water} \\ V_{displaced} \\ g    \\\\   &amp;= \\rho_{water} (\\frac{4}{3} \\pi R^3) \\ g  \\end{aligned}">
 	</DisplayEquation>	
 	</div>
