--- a/src/pages/sta/moment_of_inertia.astro
+++ b/src/pages/sta/moment_of_inertia.astro
@@ -277,7 +277,7 @@ Moments of inertia of simple shapes can be combined to calculate the moments of 
                     <Image src='/Solid_Mechanics/Bending-Figures/CommonShapes_Circle.png' width='5'> </Image>
                 </td>
             <td style="vertical-align: middle">
-                <InlineEquation equation="\\bar{I_x} = \\bar{I_y}  = \\frac{1}{4} \\pi r^4" />
+                <InlineEquation equation="\\bar{I_x'} = \\bar{I_y'}  = \\frac{1}{4} \\pi r^4" />
             </td>
             <td style="vertical-align: middle">
                 <br>
@@ -295,10 +295,10 @@ Moments of inertia of simple shapes can be combined to calculate the moments of 
                     <Image src='/Solid_Mechanics/Bending-Figures/CommonShapes_Semi.png' width='5'> </Image>
                 </td>
             <td style="vertical-align: middle">
-                <InlineEquation equation="\\bar{I_x} = (\\frac{\\pi}{8} - \\frac{8}{9\\pi}) r^4" />
+                <InlineEquation equation="\\bar{I_x'} = (\\frac{\\pi}{8} - \\frac{8}{9\\pi}) r^4" />
                 <br>
                 <br>
-                <InlineEquation equation="\\bar{I_y} = \\frac{\\pi}{8}r^4" />
+                <InlineEquation equation="\\bar{I_y'} = \\frac{\\pi}{8}r^4" />
             </td>
             <td style="vertical-align: middle">
                 <InlineEquation equation="I_x = I_y = \\frac{1}{8} \\pi r^4" />
@@ -317,7 +317,7 @@ Moments of inertia of simple shapes can be combined to calculate the moments of 
                     <Image src='/Solid_Mechanics/Bending-Figures/CommonShapes_Quart.png' width='5'> </Image>
                 </td>
             <td style="vertical-align: middle">
-            <InlineEquation equation="\\bar{I_x} = \\bar{I_y} = \\frac{1}{2}(\\frac{\\pi}{8} - \\frac{8}{9\\pi}) r^4" />
+            <InlineEquation equation="\\bar{I_x'} = \\bar{I_y'} = \\frac{1}{2}(\\frac{\\pi}{8} - \\frac{8}{9\\pi}) r^4" />
 
             </td>
             <td style="vertical-align: middle">
@@ -337,10 +337,10 @@ Moments of inertia of simple shapes can be combined to calculate the moments of 
                     <Image src='/Solid_Mechanics/Bending-Figures/CommonShapes_Elipse.png' width='5'> </Image>
                 </td>
             <td style="vertical-align: middle">
-                <InlineEquation equation="\\bar{I_x} = \\frac{1}{4} \\pi a b^3" />
+                <InlineEquation equation="\\bar{I_x'} = \\frac{1}{4} \\pi a b^3" />
                 <br>
                 <br>
-                <InlineEquation equation="\\bar{I_y} = \\frac{1}{4} \\pi a^3 b"/>
+                <InlineEquation equation="\\bar{I_y'} = \\frac{1}{4} \\pi a^3 b"/>
                 <br>
                 <br>
             </td>
