--- a/src/pages/sta/centers_of_mass.astro
+++ b/src/pages/sta/centers_of_mass.astro
@@ -110,7 +110,8 @@ The center of mass, center of gravity, and center of volume are all represented 
 
   <DisplayEquation title="When are Centers of Gravity, Mass, and Volume the same?" id="com" background="True" equation="" derivation="True">
     
-      <Image src='/Statics/COMFigures/CoGMVDerivation.jpg' width='5'> </Image>
+      	<p> The center of gravity, center of mass, and center of volume of an object are the same when that object has a constant density (is homogeneous) and gravity is constant along the object. </p>
+	<Image src='/Statics/COMFigures/CoGMVDerivation.jpg' width='5'> </Image>
 
   </DisplayEquation>
 
