--- a/src/pages/sta/centers_of_mass.astro
+++ b/src/pages/sta/centers_of_mass.astro
@@ -169,6 +169,14 @@ with similar equations for <InlineEquation equation="\\bar{y}" />.
 </SubSection>
 <!-- Lectures 28, 29  -->
 
+<SubSubSection title = "Axes of Symmetry">
+
+<Image src="/Statics/COMFigures/AxisOfSymmetry.png" width="7"></Image>
+
+If the shape has an axis of symmetry, the centroid falls on that line of symmetry. Shapes can also have more than one axis. For example, a rectangle has 2 axes, and a circle has infinite number of axes. This applies to composite shapes as well. 
+
+</SubSubSection>
+
 <SubSubSection title="Centroids of Basic Shapes" id="basic_shapes">
 
 <style>
@@ -262,10 +270,6 @@ with similar equations for <InlineEquation equation="\\bar{y}" />.
 </DisplayEquation>
 
 <p> For these equations, the weighted sum is dependent on the area of each individual shape. This is typically for 2D problems. You can also use length, weight, or mass as your weighing factor depending on what you're being asked to solve for. </p>
-
-<Image src="/Statics/COMFigures/AxisOfSymmetry.png" width="7"></Image>
-
-If the shape has an axis of symmetry, the centroid falls on that line of symmetry. Shapes can also have more than one axis. For example, a rectangle has 2 axes, and a circle has infinite number of axes. This applies to composite shapes as well. 
 
 <Example title="Find centroid of a composite shape"  id="com-ccs">
 	
