--- a/src/pages/sta/hydrostatic_fluid_pressure.astro
+++ b/src/pages/sta/hydrostatic_fluid_pressure.astro
@@ -117,7 +117,7 @@ Density of <InlineEquation equation=" \\text{water}  = 1000 \\ kg / m^3" />
 	<li> First, we will draw a FBD of the curved surface 
 		<Image src='/Statics/FluidFigures/CurvedPlateSol1.jpg' width='2'> </Image>
 	</li>
-	<li> This is complicated! Let's split into horizontal and vertical forces 
+	<li> This is complicated! Let's split into horizontal and vertical forces and look at the free body diagram of the water: 
 		<Image src='/Statics/FluidFigures/CurvedPlateSol2.jpg' width='6'> </Image>
 	</li>
 	<li> Solve for <InlineEquation equation=" F_{R1} " /> and <InlineEquation equation=" F_{R2} " /> 
