--- a/src/pages/sta/hydrostatic_fluid_pressure.astro
+++ b/src/pages/sta/hydrostatic_fluid_pressure.astro
@@ -122,7 +122,7 @@ Density of <InlineEquation equation=" \\text{water}  = 1000 \\ kg / m^3" />
 	</li>
 	<li> Solve for <InlineEquation equation=" F_{R1} " /> and <InlineEquation equation=" F_{R2} " /> 
 		<DisplayEquation equation=" \\begin{aligned}   w_1 &amp;= P_1 \\ t  = \\rho \\ g \\ h_1 \\ t  \\\\     w_2 &amp;= P_2 \\ t  = \\rho \\ g \\ h_2 \\ t   \\\\   F_{R1} &amp;= w_1 \\ R  = \\rho \\ g \\ h_1 \\ t  \\ R   \\end{aligned}"  />
-		<p> Split the horizontal distributed load into a rectangle and a triangle: </p>
+		<p> To solve for <InlineEquation equation=" F_{R2} " />, split the horizontal distributed load into a rectangle and a triangle: </p>
 		<Image src='/Statics/FluidFigures/CurvedPlateSol4.jpg' width='6'> </Image>
 		<DisplayEquation equation=" \\begin{aligned}  F_{triangle} &amp;= \\frac{1}{2} (w_2  - w_1) (R)   \\\\  &amp;= \\frac{1}{2} \\rho \\ g \\ (h_2  - h_1) \\ t \\ R   \\\\  F_{rectangle}  &amp;=  w_1 \\ R  =  \\rho \\ g \\ h_1 \\ t  \\ R   \\end{aligned}"  />
 		<DisplayEquation equation=" \\begin{aligned}  F_{R2}  &amp;= F_{triangle} +  F_{rectangle}  \\\\   &amp;= \\frac{1}{2} \\rho \\ g \\ (h_2  - h_1) \\ t \\  + \\rho \\ g \\ h_1 \\ t  \\ R   \\\\   &amp;= \\rho \\ g  \\ t  \\ R \\ [\\frac{1}{2} \\ (h_2  - h_1) + h_1]   \\\\ &amp;= \\rho \\ g  \\ t  \\ R \\ [\\frac{1}{2} \\ h_2  +  \\frac{1}{2} \\ h_1 ]  \\\\  &amp;= \\frac{1}{2} \\rho \\ g  \\ t  \\ R \\ (h_2  +  h_1)  \\end{aligned}"  />
