--- a/src/pages/sta/hydrostatic_fluid_pressure.astro
+++ b/src/pages/sta/hydrostatic_fluid_pressure.astro
@@ -102,7 +102,7 @@ In 2D, the the value for <InlineEquation equation=" w " />, the distributed load
 <DisplayEquation equation="F_R = \\sqrt{{F_H}^2+{F_V}^2}" title="Resultant force from fluid pressure" background="True" id="res-force">
 </DisplayEquation>
 
-<Image src='/Statics/FluidFigures/SlantedCurveSurf.jpg' width='7'> </Image>
+<Image src='/Statics/FluidFigures/SlantedCurveSurf.png' width='7'> </Image>
 
 <Example title="Resultant force on a curved plate"  id="fluid-curved" solution="True">
 
