add content to pages section

--- a/src/pages/about/instructions/mechse.astro
+++ b/src/pages/about/instructions/mechse.astro
@@ -98,4 +98,8 @@ import SubSubSection from "../../../components/SubSubSection.astro"
     Copy and paste this whole block right above where it is currently located, and remove all the "&lt!--" and  "--&gt". Edit everything to fit your course name, course abbreviation, etc., and add the same links as on your home page, make sure however that the links contain "?origin=sidebar" and not "?origin=coursemenu", as the distinction is essential for analytics purposes. 
 </SubSubSection>
 
+<SubSection title="Add content to your pages">
+    Now that all the files are properly set-up and accessible, refer to the <a href="https://www.mechref.org/about/docs/">Style Guide & Documentation</a> to discover all the elements at your disposal to add content to your pages (equations, images, etc.).
+</SubSection>
+
 </Layout>
